# cmake_turtorial

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
prog/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  WPmod.cpp  functionmod.cpp  functionmod.h
